# quantA

./: .env.example  .gitignore  .isort.cfg  =0.2.0  =3.0.0  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_FILES.md  DEVELOPMENT.md  FINAL_SUMMARY.md  LICENSE  Makefile  PROGRESS.md  PROJECT_STATUS.md  README.md  analyze_coverage.py  coverage_summary.txt  pytest.ini  quanta.sh  requirements-core.txt  requirements.txt
agents/: README.md  collaboration.py
config/: settings.py  strategies.py  symbols.py
data/: README.md  quant_a.duckdb
docs/: API.md  ERROR_HANDLER_IMPLEMENTATION.md  INSTALL_TROUBLESHOOTING.md  Makefile  OPTIMIZATION_GUIDE.md  QUICKSTART.md  TEST_PLAN.md  TEST_REPORT.md  conf.py  error_handler_guide.md  error_handler_quick_reference.md  rust_engine_architecture.md  xtp_integration_guide.md
examples/: advanced_strategy_example.py  backtest_example.py  data_collection_example.py  error_handler_usage.py  llm_agent_example.py  monitoring_example.py  optimization_example.py  performance_visualization_example.py  portfolio_backtest_example.py  risk_control_example.py  rl_complete_workflow.py  rl_hyperparameter_tuning_example.py  rl_large_scale_training.py  rl_strategy_example.py  rl_training_guide.py  strategies_example.py  strategy_guide_example.py
monitoring/: __init__.py  alerts.py  metrics.py
rust_engine/: Cargo.toml  README.md  build.rs  python_wrapper.py
rust_engine/src/: error.rs  event.rs  execution.rs  lib.rs  order_book.rs  order_manager.rs  portfolio.rs  python.rs
scripts/: check_env.py  generate_docs.sh  install.sh  quick_install.sh  (+2 more)
(+127 files in other folders)
